--- a/Consolidation11/Info.plist
+++ b/Consolidation11/Info.plist
@@ -54,5 +54,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>FingerPaint-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
