--- a/Consolidation11/Info.plist
+++ b/Consolidation11/Info.plist
@@ -57,6 +57,9 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>FingerPaint-Regular.ttf</string>
+		<string>Courgette-Regular.ttf</string>
+		<string>ClickerScript-Regular.ttf</string>
+		<string>Kranky-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
